--- a/about.html
+++ b/about.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset = "utf-8"/>
         <meta name="viewport" content="width=device-width"/>
         <title>About.</title>
     </head>
-    <body>
-        <h1>This is the about section</h1>
+    <body background="R.jpg">
+        <h1>My 90s Website</h1>
+        <h2>About this</h2>
+        <ul>
+            <li>
+                <a href="index.html">
+                Main
+                </a>
+            </li>
+            <li>About</li>
+        </ul>
     </body>
 </html>
