style: removed button from within link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>My 90s Website</h1>
         <h2>Main page</h2>
         <ul>
-            <li><button>Main</button></li>
+            <li>Main</li>
             <li>
                 <a href=about.html>
                         About
