feat: started on solar system main page

--- a/about.html
+++ b/about.html
@@ -5,8 +5,33 @@
         <meta name="viewport" content="width=device-width"/>
         <title>About.</title>
     </head>
+
     <body background="R.jpg">
-        <h1>My 90s Website</h1>
+
+
+
+        <header>
+            <h1>My 90s Website</h1>
+
+            <nav>
+                <ul>
+                    <li>
+                        <a href="index.html">
+                        Main
+                        </a>
+                    </li>
+                    <li>
+                        <a href=about.html>
+                            About
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+
+        </header>
+
+
+
         <h2>About this</h2>
         <ul>
             <li>
