--- a/pengin.html
+++ b/pengin.html
@@ -6,20 +6,30 @@
     <title>Pengins</title>
 </head>
 <body background="R.jpg">
-    <h1>My 90s Website</h1> 
+
+    <header>
+        <h1>My 90s Website</h1>
+
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">
+                    Main
+                    </a>
+                </li>
+                <li>
+                    <a href=about.html>
+                        About
+                    </a>
+                </li>
+            </ul>
+        </nav>
+
+    </header>
+
     <h2>Pengin page</h2>
-    <ul>
-        <li>
-            <a href="index.html">
-                Main
-            </a>
-        </li>
-        <li>
-            <a href="about.html">
-                About
-            </a>
-        </li>
-    </ul>
+
+
     <p>Pengins are cool.</p>
     <img src="R.jpg" alt="Missing pengin 0,0" width="200" height="140">
 
