build: added mercury file and remainder of planets to index

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
         <title>About.</title>
     </head>
 
-    <body background="R.jpg">
+    <body background="images/space-background.jpg">
 
 
 
