--- a/pengin.html
+++ b/pengin.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pengins</title>
 </head>
-<body background="R.jpg">
+<body background="images/space-background.jpg">
 
     <header>
         <h1>My 90s Website</h1>
@@ -31,7 +31,7 @@
 
 
     <p>Pengins are cool.</p>
-    <img src="R.jpg" alt="Missing pengin 0,0" width="200" height="140">
+    <img src="images/penguin.jpg" alt="Missing pengin 0,0" width="200" height="140">
 
 </body>
 </html>
