docs: mentioned use of claude ai

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
         <title>About.</title>
     </head>
 
-    <body background="images/space-background.jpg">
+    <body>
 
 
 
@@ -27,19 +27,38 @@
                     </li>
                 </ul>
             </nav>
-
         </header>
 
+        <t>
+            <tr><tr>
+                <h3>Why this webpage?</h3>
+            </tr>
+            <tr>
+                <h3></h3>
+            </tr>
+            <tr>
+                <h3></h3>
+            </tr></tr>
+            <tr><td>
+                <p></p>
+            </td>
+            <td>
+                <p>Cause it's neat.</p>
+            </td>
+            <td>
+                <p></p>
+            </td></tr>
+            <tr></tr>
+        </t>
+
+        
 
 
-        <h2>About this</h2>
-        <ul>
-            <li>
-                <a href="index.html">
-                Main
-                </a>
-            </li>
-            <li>About</li>
-        </ul>
+
+
+
+
+
     </body>
+
 </html>
