--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <td></td>
         <td></td>
         <td>
-          <a href="pengin.html">
+          <a href="spheres/mercury.html">
             <img src="images/mercury.png" alt="the planet mercury" width="40" />
           </a>
         </td>
@@ -63,7 +63,7 @@
           </a>
         </td>
         <td>
-          <a href="about.html">
+          <a href="spheres/sun.html">
             <img src="images/sun.png" alt="the sun" width="400" />
           </a>
         </td>
